--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:name=".demo1.TestActivity"
             android:exported="true" />
 
-        <activity android:name=".ui.SupportActivity"></activity>
+        <activity android:name=".ui.inner.SupportActivity"></activity>
     </application>
 
 </manifest>
