动态换肤，可以换字符串和图片，换布局文件还有点问题

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':hookactivity', ':testlib', ':dynmictype', ':lifeactivity', ':rsademo', ':weibo', ':fordagger', ':dagger2mvp'
+include ':app', ':hookactivity', ':testlib', ':dynmictype', ':lifeactivity', ':rsademo', ':weibo', ':fordagger', ':dagger2mvp', ':resourceloader', ':resourcethemesky', ':resourcethemeclassic'
